# AnoCat

./: .gitignore  README.md  docker-compose.yml
backend_server/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run.py  test.py
backend_server/alembic/: env.py
backend_server/alembic/versions/: 047859bf8d28_.py  20230919_7bc83bf1e8fd_.py  20230924_1fe9b2e6adeb_.py  59d85e33748f_.py  5b81991ca5c0_test.py  5f5a817573ac_.py  658cbe2d350c_test.py  6c3e94e6b979_test.py  9b0601e83644_.py  a1d0099ffbc7_.py  b6a8899e2026_.py  e1b9416757bc_.py  f160c577106a_.py
backend_server/src/: config.py  main.py
backend_server/src/anocat/api/: config.py  router.py
backend_server/src/anocat/bot/: FastAPIRequestHandler.py  _callbacks.py  ag_router.py  bot.py  config.py  dispatcher.py  router.py
backend_server/src/anocat/models/: answers.py  mails.py  topic_of_day.py  topics.py  users.py
backend_server/src/anocat/repositories/: answers.py  mails.py  topic_of_day.py
backend_server/src/anocat/schemas/: mails.py  (+1 more)
backend_server/src/database/: database.py  database_metadata.py  db_config.py  metadata.py
backend_server/src/models/: __init__.py  answers.py  bug_reports.py  emoji_statuses.py  mails.py  themes.py  topic_of_day.py  topics.py  users.py  violation_reports.py
backend_server/src/schemas/: answers.py  bug_reports.py  emoji_statuses.py  mails.py  themes.py  topic_of_day.py  topics.py  users.py  violation_reports.py
backend_server/src/services/: answers.py  topic_of_day.py  topics.py  users.py
backend_server/src/utils/: repository.py  types.py  unitofwork.py
(+91 files in other folders)
